--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ title      : "SEM Scholars"
 email      : "semscholars.team@gmail.com" #this is also the email contact forms will go to
 description: "SEM Scholars- Scholarship Exploring with Mentors"
 author     : "Linh Mon- Founder of SEM Scholars "
-#logo:     #optional, defaults to site title
-   #path: assets\img\j.png
-   #height: 60px #height in px, defaults to 52px
+logo:     #optional, defaults to site title
+   path: assets\img\logo.png
+   height: 60px #height in px, defaults to 52px
 
 locale: "en-US" # See available languages in _data/sitetext.yml
 
