--- a/_data/style.yml
+++ b/_data/style.yml
@@ -4,5 +4,5 @@
 #black: "#000"
 
 #Image Customization
-header-image: "../img/one.jpg"
+header-image: "../img/cover.png"
 contact-image: "../img/map-image.png"
